GPLIM-4298 split worklist rows into multiple rows if it'll overflow

--- a/janus-app/src/main/filters/filter-dev.properties
+++ b/janus-app/src/main/filters/filter-dev.properties
@@ -1,7 +1,7 @@
 mercury.service.hostname=mercury.broadinstitute.org:8443
-rootconfig.dir=janus-app/src/test/MESSAGING
+rootconfig.dir=src/test/MESSAGING
 bettalims.http.url=https://mercurydev.broadinstitute.org:8443/Mercury/rest/bettalimsmessage
-bettalims.stash.dir=janus-app/src/test/MESSAGING/stash
+bettalims.stash.dir=src/test/MESSAGING/stash
 bettalims.archive.dir=janus-app/src/test/MESSAGING/archive
 jms.server.name=seq01.broadinstitute.org
 jms.server.port=5445
